# Deutschland-Data-Mining

./: 'source'  .env.example  .gitignore  KDP_Deutschland_Nischenpipeline_Software_Requirement_Sheet.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  celerybeat-schedule  diag_micro.py  diagnose_entities.py  exported_candidates.csv  import_micro_domain_catalog.py  importer.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_report_file_paths.py  0003_sachbuch_depth_and_book_metadata.py  0004_keyword_priority_and_score_depth.py  0005_keyword_intelligence_fields.py  0006_discovery_engine.py  0007_ai_semantic_intelligence.py  (+2 more)
backend/app/: main.py
backend/generated_reports/: blutdruck_tagebuch_fuer_senioren_im_alltag_3_competitor_report.json  blutdruck_tagebuch_fuer_senioren_im_alltag_3_competitor_report.md  blutdruck_tagebuch_fuer_senioren_im_alltag_3_keyword_report.json  blutdruck_tagebuch_fuer_senioren_im_alltag_3_keyword_report.md  blutdrucktagebuch_1.json  blutdrucktagebuch_1.md  blutdrucktagebuch_1_niche_report.json  blutdrucktagebuch_1_niche_report.md  ki_für_handwerker_2.json  ki_für_handwerker_2.md  ki_für_handwerker_2_book_concept_report.md  ki_für_handwerker_2_competitor_report.json  ki_für_handwerker_2_competitor_report.md  ki_für_handwerker_2_go_no_go_report.json  ki_für_handwerker_2_go_no_go_report.md  ki_für_handwerker_2_keyword_report.md
backend/scripts/: import_bulk_seed_file.py  restore_discovery_backup.py
backend/tests/: test_discovery_quality.py  test_seed_network.py
(+257 files in other folders)
