[project]
name = "kdp-deutschland-backend"
version = "0.1.0"
description = "Backend for the KDP Deutschland opportunity intelligence engine."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "beautifulsoup4>=4.12.3",
  "celery[redis]>=5.4.0",
  "curl-cffi>=0.7.1",
  "fastapi>=0.115.0",
  "h2>=4.1.0",
  "httpx>=0.28.0",
  "openai>=2.40.0,<3.0.0",
  "playwright>=1.55.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "reportlab>=4.2.5",
  "sentry-sdk[fastapi]>=2.19.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
